# unilang

./: Cargo.toml  README.md
src/: lib.rs
src/chat/: chat.rs  message.rs  mod.rs  model.rs  model_names.rs  openai.rs  qianfan.rs  role.rs
src/chat/response/: mod.rs  response.rs
src/openai/: mod.rs
src/openai/chat/: api_call.rs  mod.rs  request_body.rs
src/openai/chat/response/: completion.rs  mod.rs  stream.rs
src/qianfan/: auth.rs  error.rs  mod.rs
src/qianfan/chat/: _response.rs  api_call.rs  message.rs  mod.rs  model_names.rs  request_body.rs
src/qianfan/chat/response/: mod.rs  response.rs  stream.rs  token_usage.rs
tests/: stream.rs
