[package]
name = "unilang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
reqwest-streams = { version = "0.4.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["macros"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
